Fix text alignment and add margin for .next class

--- a/DEMO/hs.css
+++ b/DEMO/hs.css
@@ -49,4 +49,5 @@ text-wrap: wrap;}
 
 .next {
 font-size: 12px;
-text-align: left;}
+text-align: left;
+margin: 0 10px;}
